--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,80 @@
 **/.DS_Store
+**/.DS_Store
+
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# PyDev specific (Python IDE for Eclipse)
+*.pydevproject
+
+# CDT-specific (C/C++ Development Tooling)
+.cproject
+
+# CDT- autotools
+.autotools
+
+# Java annotation processor (APT)
+.factorypath
+
+# PDT-specific (PHP Development Tools)
+.buildpath
+
+# sbteclipse plugin
+.target
+
+# Tern plugin
+.tern-project
+
+# TeXlipse plugin
+.texlipse
+
+# STS (Spring Tool Suite)
+.springBeans
+
+# Code Recommenders
+.recommenders/
+
+# Annotation Processing
+.apt_generated/
+.apt_generated_test/
+
+# Scala IDE specific (Scala & Java development for Eclipse)
+.cache-main
+.scala_dependencies
+.worksheet
+
+# Uncomment this line if you wish to ignore the project description file.
+# Typically, this file would be tracked if it contains build/dependency configurations:
+#.project
+
+.classpath
+laucnh.json
+profile-microservice/.classpath
+.vscode/launch.json
+profile-microservice/.classpath
+profile-microservice/.project
+song-microservice/.classpath
+*.prefs
+*.prefs
+song-microservice/.classpath
+profile-microservice/.classpath
+profile-microservice/.project
+profile-microservice/.settings/org.eclipse.jdt.core.prefs
+song-microservice/.classpath
+song-microservice/.project
+*.prefs
