--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,5 @@ profile-microservice/.settings/org.eclipse.jdt.core.prefs
 song-microservice/.classpath
 song-microservice/.project
 *.prefs
+.vscode/launch.json
+song-microservice/.settings/org.eclipse.jdt.apt.core.prefs
