--- a/song-microservice/pom.xml
+++ b/song-microservice/pom.xml
@@ -7,7 +7,6 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.7.RELEASE</version>
 		<relativePath />
-		<!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.csc301</groupId>
 	<artifactId>song-microservice</artifactId>
@@ -47,7 +46,6 @@
 			<version>20190722</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
 		<dependency>
 			<groupId>com.squareup.okhttp3</groupId>
 			<artifactId>okhttp</artifactId>
@@ -60,6 +58,23 @@
 			<optional>true</optional>
 			<scope>runtime</scope>
 		</dependency>
+
+		<!-- Add Junit Jupiter API for testing -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.6.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- Add Junit Jupiter Engine for testing -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.6.0</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
